--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,5 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.spm filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
+
+*.ipynb filter=lfs diff=lfs merge=lfs -text
