--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ requests==2.28.1
 tokenizers==0.13.1
 tqdm==4.64.1
 transformers==4.23.1
+accelerate==0.14.0
 typing_extensions==4.4.0
 selen-kaa==0.2.2
 urllib3==1.26.12
