--- a/webapp/app/package.json
+++ b/webapp/app/package.json
@@ -21,5 +21,17 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8007"
+  "proxy": "http://localhost:8007",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
